# dagster-via-kubernetes

./: .env-sample  .gitignore  Dockerfile  README.md  google-artifact-registry.yml  pyproject.toml  service-account.yaml  user_code_values.yaml  values.yaml  values_full.yaml
build_cache/example_project/: workspace.yaml
build_cache/example_project/project/: repo.py
dagster/: workspace.yaml
dagster/project/: repo.py
dagster/project/jobs/: hello.py
project/: hello.py
