[tool.poetry]
name = "dagster-via-kubernetes"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]

[tool.poetry.dependencies]
python = "3.9.10"
dagster = "^0.14.14"
dagit = "^0.14.14"
dagster-dbt = "^0.14.14"
dagster-gcp = "^0.14.14"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
